[gd_scene load_steps=40 format=3 uid="uid://c87xpcvmjksrj"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/player.gd" id="1_ebmuu"]
[ext_resource type="PackedScene" uid="uid://b6xr6kww5ndcm" path="res://Scenes/Items/Cards/card.tscn" id="2_v0n5p"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/playerui.gd" id="2_yjhvj"]
[ext_resource type="Script" path="res://Scripts/Inventory/inventory_handler.gd" id="3_be81r"]
[ext_resource type="Script" path="res://Scripts/Characters/Player/player_interaction.gd" id="3_mhxvx"]
[ext_resource type="Script" path="res://Scripts/Items/item_data.gd" id="4_agihy"]
[ext_resource type="Texture2D" uid="uid://b2xdk1qer1hbx" path="res://Icons/card.png" id="6_ymwmx"]
[ext_resource type="PackedScene" uid="uid://df4fbxivaxyu7" path="res://Scenes/Items/Cards/thrown_card.tscn" id="8_dntca"]
[ext_resource type="Texture2D" uid="uid://b3wv7d2xwvu51" path="res://Icons/fire_card.png" id="9_vmp4i"]
[ext_resource type="PackedScene" uid="uid://w6yapaq6fr6w" path="res://Scenes/Items/Cards/fire_card.tscn" id="9_wgvut"]
[ext_resource type="PackedScene" uid="uid://cyoaqsbmcbq3p" path="res://Scenes/Items/Cards/thrown_fire_card.tscn" id="11_1i56d"]
[ext_resource type="Texture2D" uid="uid://0k7l80jnbv2w" path="res://Icons/ice_card.png" id="12_er1jr"]
[ext_resource type="PackedScene" uid="uid://imgfsc22wb6y" path="res://Scenes/Items/Consumables/the_fist.tscn" id="12_oof52"]
[ext_resource type="PackedScene" uid="uid://do7rg0qvttuw5" path="res://Scenes/Items/Cards/ice_card.tscn" id="13_0rvnj"]
[ext_resource type="PackedScene" uid="uid://cit341d8bpxnd" path="res://Scenes/Items/Consumables/the_snail.tscn" id="13_xr071"]
[ext_resource type="PackedScene" uid="uid://bjkomqmwn8sb7" path="res://Scenes/Items/Cards/thrown_ice_card.tscn" id="14_j08m4"]
[ext_resource type="Texture2D" uid="uid://dt7osuvlmq2m3" path="res://Icons/healing_card.png" id="15_c1gof"]
[ext_resource type="PackedScene" uid="uid://d2nqk0fjdlqbi" path="res://Scenes/Items/Cards/healing_card.tscn" id="17_k5xvu"]
[ext_resource type="Texture2D" uid="uid://ct1gleu8rixp5" path="res://Icons/metal_card.png" id="18_1ys0x"]
[ext_resource type="PackedScene" uid="uid://c53hawvcyd08c" path="res://Scenes/Items/Cards/thrown_healing_card.tscn" id="18_jx3ei"]
[ext_resource type="PackedScene" uid="uid://n6t00bfhgv11" path="res://Scenes/Items/Cards/metal_card.tscn" id="18_pym3c"]
[ext_resource type="PackedScene" uid="uid://bmlv8bamq2hg2" path="res://Scenes/Items/Cards/thrown_metal_card.tscn" id="19_y47n6"]
[ext_resource type="Texture2D" uid="uid://co6xv7mjkgv7v" path="res://Icons/lightning_card.png" id="21_06vhm"]
[ext_resource type="PackedScene" uid="uid://xi6gaknl4fq0" path="res://Scenes/Items/Cards/lightning_card.tscn" id="22_sil24"]
[ext_resource type="PackedScene" uid="uid://cuirtaxlvn20d" path="res://Scenes/Items/Cards/thrown_lightning_card.tscn" id="23_gbt44"]
[ext_resource type="PackedScene" uid="uid://njc8ckesjgd0" path="res://Scenes/Items/Consumables/the_printer.tscn" id="26_5jqyq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n0dqk"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ygh17"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdn4v"]
bg_color = Color(0, 0, 0, 0.686275)

[sub_resource type="Resource" id="Resource_crx4w"]
script = ExtResource("4_agihy")
item_name = "Card"
item_model_prefab = ExtResource("2_v0n5p")
thrown_item_model_prefab = ExtResource("8_dntca")
icon = ExtResource("6_ymwmx")

[sub_resource type="Resource" id="Resource_k1a7s"]
script = ExtResource("4_agihy")
item_name = "Fire Card"
item_model_prefab = ExtResource("9_wgvut")
thrown_item_model_prefab = ExtResource("11_1i56d")
icon = ExtResource("9_vmp4i")

[sub_resource type="Resource" id="Resource_txmua"]
script = ExtResource("4_agihy")
item_name = "Ice Card"
item_model_prefab = ExtResource("13_0rvnj")
thrown_item_model_prefab = ExtResource("14_j08m4")
icon = ExtResource("12_er1jr")

[sub_resource type="Resource" id="Resource_ltghq"]
script = ExtResource("4_agihy")
item_name = "Healing Card"
item_model_prefab = ExtResource("17_k5xvu")
thrown_item_model_prefab = ExtResource("18_jx3ei")
icon = ExtResource("15_c1gof")

[sub_resource type="Resource" id="Resource_qrklw"]
script = ExtResource("4_agihy")
item_name = "Metal Card"
item_model_prefab = ExtResource("18_pym3c")
thrown_item_model_prefab = ExtResource("19_y47n6")
icon = ExtResource("18_1ys0x")

[sub_resource type="Resource" id="Resource_il358"]
script = ExtResource("4_agihy")
item_name = "Lightning Card"
item_model_prefab = ExtResource("22_sil24")
thrown_item_model_prefab = ExtResource("23_gbt44")
icon = ExtResource("21_06vhm")

[sub_resource type="Resource" id="Resource_ci7mt"]
script = ExtResource("4_agihy")
item_name = "The Fist"
item_model_prefab = ExtResource("12_oof52")

[sub_resource type="Resource" id="Resource_m4268"]
script = ExtResource("4_agihy")
item_name = "The Snail"
item_model_prefab = ExtResource("13_xr071")

[sub_resource type="Resource" id="Resource_q4kh8"]
script = ExtResource("4_agihy")
item_name = "The Printer"
item_model_prefab = ExtResource("26_5jqyq")

[sub_resource type="BoxShape3D" id="BoxShape3D_msfq4"]
size = Vector3(1.1, 2, 1.1)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 13
collision_mask = 13
script = ExtResource("1_ebmuu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_n0dqk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("ConvexPolygonShape3D_ygh17")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62534, 0)
visible = false

[node name="Camera3D" type="Camera3D" parent="Head"]
visible = false

[node name="Marker3D" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.817585)
visible = false

[node name="PlayerUI" type="Control" parent="." node_paths=PackedStringArray("player_health_label", "stopwatch_label", "enemy_count_label", "level_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_yjhvj")
player_health_label = NodePath("HealthUI/HealthLabel")
stopwatch_label = NodePath("StopwatchUI/TimerLabel")
enemy_count_label = NodePath("LevelInfoUI/EnemyCountLabel")
level_label = NodePath("LevelInfoUI/LevelLabel")

[node name="Crosshair" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.764706)

[node name="HealthUI" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 230.0
grow_vertical = 0
mouse_filter = 1
color = Color(0, 0, 0, 0.686275)

[node name="HealthLabel" type="Label" parent="PlayerUI/HealthUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497826
anchor_top = 0.383333
anchor_right = 0.502174
anchor_bottom = 0.616667
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="StopwatchUI" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
offset_right = 230.0
offset_bottom = 120.0
mouse_filter = 1
color = Color(0, 0, 0, 0.686275)

[node name="TimerLabel" type="Label" parent="PlayerUI/StopwatchUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497826
anchor_top = 0.383333
anchor_right = 0.502174
anchor_bottom = 0.616667
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="LevelInfoUI" type="ColorRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_bottom = 120.0
grow_horizontal = 0
mouse_filter = 1
color = Color(0, 0, 0, 0.686275)

[node name="EnemyCountLabel" type="Label" parent="PlayerUI/LevelInfoUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497826
anchor_top = 0.625
anchor_right = 0.502174
anchor_bottom = 0.858333
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="PlayerUI/LevelInfoUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497826
anchor_top = 0.141667
anchor_right = 0.502174
anchor_bottom = 0.375
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="InventoryUI" type="Control" parent="PlayerUI" node_paths=PackedStringArray("inventory_grid")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_be81r")
inventory_grid = NodePath("Panel/MarginContainer/HBoxContainer")

[node name="Panel" type="Panel" parent="PlayerUI/InventoryUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -287.5
offset_top = -120.0
offset_right = 287.5
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_pdn4v")

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/InventoryUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI/InventoryUI/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="PickupArea" type="Area3D" parent="."]
visible = false
script = ExtResource("3_mhxvx")
item_types = Array[ExtResource("4_agihy")]([SubResource("Resource_crx4w"), SubResource("Resource_k1a7s"), SubResource("Resource_txmua"), SubResource("Resource_ltghq"), SubResource("Resource_qrklw"), SubResource("Resource_il358"), SubResource("Resource_ci7mt"), SubResource("Resource_m4268"), SubResource("Resource_q4kh8")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.988614, 0)
visible = false
shape = SubResource("BoxShape3D_msfq4")

[connection signal="input_event" from="." to="PickupArea" method="_on_player_input_event"]
[connection signal="check_cards" from="PlayerUI" to="PlayerUI/InventoryUI" method="cards_in_inventory"]
[connection signal="body_entered" from="PickupArea" to="PickupArea" method="on_item_entered_area"]
[connection signal="on_card_pickedup" from="PickupArea" to="PlayerUI/InventoryUI" method="pickup_card"]
[connection signal="on_consumable_pickedup" from="PickupArea" to="PlayerUI/InventoryUI" method="pickup_consumable"]
